@@ -71,7 +71,7 @@ ember_bin_SOURCES = Avatar.cpp ConsoleObjectImpl.cpp 	MediaDeployer.cpp \
 			EmberPhysicalEntity.cpp EmberPhysicalEntity.h EmberEntity.cpp EmberOgrePrerequisites.h \
 			AvatarEmberEntity.cpp AvatarEmberEntity.h PersonEmberEntity.cpp PersonEmberEntity.h \
 			WorldEmberEntity.cpp WorldEmberEntity.h TerrainPage.cpp TerrainPage.h TerrainArea.cpp \
-		TerrainArea.h FreeCameraController.cpp EmberEntityUserObject.cpp
+		TerrainArea.h  EmberEntityUserObject.cpp
 
 
 
@@ -101,4 +101,4 @@ confdir = $(sysconfdir)/ember/
 dist_conf_DATA = ogre.cfg plugins.cfg  resources.cfg terrain.cfg
 
 
-noinst_HEADERS = FreeCameraController.h EmberEntityUserObject.h
+noinst_HEADERS =  EmberEntityUserObject.h
